2007-08-15  Martin Hunt  <hunt@redhat.com>
	PR4736
	* staprun.c (cleanup): Set priority back to normal
	before removing module.

2007-08-15  Martin Hunt  <hunt@redhat.com>
	
	* stap_merge.tcl: New. 

2007-08-14  David Smith  <dsmith@redhat.com>

	Merge from setuid-branch.  Changes also by Martin Hunt
	<hunt@redhat.com>.

	* staprun.c (init_staprun): Drop CAP_SYS_ADMIN when we're done
	with it.
	(main): Calls parse_modpath instead of path_parse_modname.  Just
	call parse_modpath with argv[optind]. Let it allocate and set
	modpath and modname.  If no modulename was given, display usage
	and exit.  Drop CAP_SYS_NICE when we're done with it.  Set
	atexit(exit_cleanup) so cleanup always gets called and modules get
	removed.  Call handle_symbols.
	(run_stapio): Set argv[0] to stapio so that it executes as itself
	instead of staprun.
	(cleanup): Only do cleanups once and only try to remove module
	when appropriate.
	(exit_cleanup): New. Calls cleanup().
	(mountfs): Sets uid to root before making directory and then
	restores uid.
	(setup_ctl_channel): Uses DEBUGFS define and improved
	error message.
	(setup_relayfs): Ditto.
	(setup_oldrelayfs): Uses DEBUGFS and RELAYFS defines.
	(run_stp_check): Replaced by mountfs().
	(mountfs): New function.  Replaces an external script with C code.
	(init_staprun): Calls mountfs() instead of run_stp_check().

	* staprun.h: Renamed path_parse_modname to parse_modpath.  Added
	MODULE_NAME_LEN define.  Added [_][p]err macros.  Removed
	VERSION_CMD.

	* mainloop.c (cleanup_and_exit): Make sure initialized is 2
	before exiting with code 2.
	(stp_main_loop): Set initialized to 2 when STP_TRANSPORT
	is received. Call cleanup_and_exit() with proper status.
	(start_cmd): exit 1 instead of -1.
	(system_cmd): Ditto.
	(init_staprun): Renamed init_stapio.
	(cleanup_and_exit): Set exit status.

	* cap.c: New file.
	* common.c: New file.
	* stapio.c: New file.
	* staprun_funcs.c: New file.
	* Makefile: Removed.
